Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
4.8.0
-
None
-
Database PostgreSQL 9.1.1
-
f8edd0bad1f41267a1805297a5bc8717685cad2a
Description
When calling QSqlTableModel::insertRecord(-1, rec) on a table with a primary key that auto increments, the insert fails with the following SQL error:
"ERROR: null value in column "id" violates not-null constraint
QPSQL: Unable to create query"
This call was working fine in QT 4.7.