QSqlTM: respect generated flag in insertRecord() and setRecord()

These methods failed to respect the setting of the generated flag
on the fields of source record. INSERT and UPDATE statements should
only include fields where generated is TRUE.

Test included.

Follow-up to 0f15ab4e750690bdb2b649332d5c3276bf24c440.

Change-Id: I2f10dbcd7e5e5123489b38a123effe43a673a427
Task-number: QTBUG-23592
Reviewed-by: Bill King <bill.king@nokia.com>
Reviewed-by: Jason Dolan <jason.t.dolan@gmail.com>
Reviewed-by: Michael Goddard <michael.goddard@nokia.com>